// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/Button AsLink smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <a href="/dashboard"
     class="btn text-xs sm:text-sm transition-all btn-primary btn-md shadow-none capitalize border-solid active:brightness-95"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class>
      Go to Dashboard
    </span>
  </a>
</div>
`;

exports[`Elements/Button Chip play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <button type="button"
            class="btn text-xs sm:text-sm transition-all btn-primary shadow-none rounded-full normal-case border-solid pointer-events-none cursor-default select-none is-chip"
    >
      <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
      </span>
      <span class>
        Chip Label
      </span>
      <i class="inline-flex align-middle cursor-pointer pointer-events-auto ltr:ml-2 rtl:mr-2 ltr:order-last rtl:order-first hover:opacity-80 active:opacity-70"
         aria-label="Remove"
         role="button"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
             viewbox="0 0 24 24"
             fill="none"
             stroke="currentColor"
             stroke-width="1.5"
             stroke-linecap="round"
             stroke-linejoin="round"
             class="w-4 h-4"
        >
          <line x1="18"
                y1="6"
                x2="6"
                y2="18"
          >
          </line>
          <line x1="6"
                y1="6"
                x2="18"
                y2="18"
          >
          </line>
        </svg>
      </i>
    </button>
    <div class="mt-2 text-xs text-gray-500">
      <span>
        Button clicks:
      </span>
      <span id="btnClicks">
        0
      </span>
    </div>
    <div class="text-xs text-gray-500">
      <span>
        Chip clicks:
      </span>
      <span id="chipClicks">
        1
      </span>
    </div>
  </div>
</div>
`;

exports[`Elements/Button Default play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <button type="button"
          class="btn text-xs sm:text-sm transition-all shadow-none normal-case border-solid"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class>
      Button
    </span>
  </button>
</div>
`;

exports[`Elements/Button Disabled play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <a class="btn text-xs sm:text-sm transition-all bg-gray-100 cursor-not-allowed btn-md shadow-none normal-case border-solid active:brightness-95"
     disabled="true"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class>
      Disabled
    </span>
  </a>
</div>
`;

exports[`Elements/Button FormButton play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <form>
    <div class="space-y-4">
      <input type="email"
             placeholder="Email"
             class="border p-2 rounded"
      >
      <input type="password"
             placeholder="Password"
             class="border p-2 rounded"
      >
      <button type="submit"
              class="btn text-xs sm:text-sm transition-all btn-success shadow-none normal-case border-solid active:brightness-95 cursor-default"
      >
        <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-5 ltr:mr-2 rtl:ml-2">
          <svg xmlns="http://www.w3.org/2000/svg"
               width="20"
               height="20"
               viewbox="0 0 24 24"
               fill="none"
               stroke="currentColor"
               stroke-width="1.5"
               stroke-linecap="round"
               stroke-linejoin="round"
               class="animate-[spin_2s_linear_infinite]"
          >
            <line x1="12"
                  y1="2"
                  x2="12"
                  y2="6"
            >
            </line>
            <line x1="12"
                  y1="18"
                  x2="12"
                  y2="22"
            >
            </line>
            <line x1="4.93"
                  y1="4.93"
                  x2="7.76"
                  y2="7.76"
            >
            </line>
            <line x1="16.24"
                  y1="16.24"
                  x2="19.07"
                  y2="19.07"
            >
            </line>
            <line x1="2"
                  y1="12"
                  x2="6"
                  y2="12"
            >
            </line>
            <line x1="18"
                  y1="12"
                  x2="22"
                  y2="12"
            >
            </line>
            <line x1="4.93"
                  y1="19.07"
                  x2="7.76"
                  y2="16.24"
            >
            </line>
            <line x1="16.24"
                  y1="7.76"
                  x2="19.07"
                  y2="4.93"
            >
            </line>
          </svg>
        </span>
        <span class>
          Submitting...
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Elements/Button GradientBorders play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <button type="button"
          class="btn text-xs sm:text-sm transition-all btn-outline-gradient btn-md shadow-none rounded-md normal-case border-dashed"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class>
      Gradient Border Button
    </span>
  </button>
</div>
`;

exports[`Elements/Button InteractiveButton play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <button type="button"
          class="btn text-xs sm:text-sm transition-all btn-primary btn-md shadow-none normal-case border-solid active:brightness-95"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class="inline-flex align-middle">
      <svg width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class
      >
        <circle cx="12"
                cy="12"
                r="3"
                stroke="currentColor"
                stroke-width="1.5"
        >
        </circle>
        <path opacity="0.5"
              d="M13.7654 2.15224C13.3978 2 12.9319 2 12 2C11.0681 2 10.6022 2 10.2346 2.15224C9.74457 2.35523 9.35522 2.74458 9.15223 3.23463C9.05957 3.45834 9.0233 3.7185 9.00911 4.09799C8.98826 4.65568 8.70226 5.17189 8.21894 5.45093C7.73564 5.72996 7.14559 5.71954 6.65219 5.45876C6.31645 5.2813 6.07301 5.18262 5.83294 5.15102C5.30704 5.08178 4.77518 5.22429 4.35436 5.5472C4.03874 5.78938 3.80577 6.1929 3.33983 6.99993C2.87389 7.80697 2.64092 8.21048 2.58899 8.60491C2.51976 9.1308 2.66227 9.66266 2.98518 10.0835C3.13256 10.2756 3.3397 10.437 3.66119 10.639C4.1338 10.936 4.43789 11.4419 4.43786 12C4.43783 12.5581 4.13375 13.0639 3.66118 13.3608C3.33965 13.5629 3.13248 13.7244 2.98508 13.9165C2.66217 14.3373 2.51966 14.8691 2.5889 15.395C2.64082 15.7894 2.87379 16.193 3.33973 17C3.80568 17.807 4.03865 18.2106 4.35426 18.4527C4.77508 18.7756 5.30694 18.9181 5.83284 18.8489C6.07289 18.8173 6.31632 18.7186 6.65204 18.5412C7.14547 18.2804 7.73556 18.27 8.2189 18.549C8.70224 18.8281 8.98826 19.3443 9.00911 19.9021C9.02331 20.2815 9.05957 20.5417 9.15223 20.7654C9.35522 21.2554 9.74457 21.6448 10.2346 21.8478C10.6022 22 11.0681 22 12 22C12.9319 22 13.3978 22 13.7654 21.8478C14.2554 21.6448 14.6448 21.2554 14.8477 20.7654C14.9404 20.5417 14.9767 20.2815 14.9909 19.902C15.0117 19.3443 15.2977 18.8281 15.781 18.549C16.2643 18.2699 16.8544 18.2804 17.3479 18.5412C17.6836 18.7186 17.927 18.8172 18.167 18.8488C18.6929 18.9181 19.2248 18.7756 19.6456 18.4527C19.9612 18.2105 20.1942 17.807 20.6601 16.9999C21.1261 16.1929 21.3591 15.7894 21.411 15.395C21.4802 14.8691 21.3377 14.3372 21.0148 13.9164C20.8674 13.7243 20.6602 13.5628 20.3387 13.3608C19.8662 13.0639 19.5621 12.558 19.5621 11.9999C19.5621 11.4418 19.8662 10.9361 20.3387 10.6392C20.6603 10.4371 20.8675 10.2757 21.0149 10.0835C21.3378 9.66273 21.4803 9.13087 21.4111 8.60497C21.3592 8.21055 21.1262 7.80703 20.6602 7C20.1943 6.19297 19.9613 5.78945 19.6457 5.54727C19.2249 5.22436 18.693 5.08185 18.1671 5.15109C17.9271 5.18269 17.6837 5.28136 17.3479 5.4588C16.8545 5.71959 16.2644 5.73002 15.7811 5.45096C15.2977 5.17191 15.0117 4.65566 14.9909 4.09794C14.9767 3.71848 14.9404 3.45833 14.8477 3.23463C14.6448 2.74458 14.2554 2.35523 13.7654 2.15224Z"
              stroke="currentColor"
              stroke-width="1.5"
        >
        </path>
      </svg>
    </span>
    <span class="ltr:ml-2 rtl:mr-2">
      Interactive Button
    </span>
  </button>
</div>
`;

exports[`Elements/Button Loading play-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <button type="button"
          class="btn text-xs sm:text-sm transition-all btn-outline-success shadow-none capitalize border-solid cursor-default"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-5 ltr:mr-2 rtl:ml-2">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="20"
           height="20"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="1.5"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="animate-[spin_2s_linear_infinite]"
      >
        <line x1="12"
              y1="2"
              x2="12"
              y2="6"
        >
        </line>
        <line x1="12"
              y1="18"
              x2="12"
              y2="22"
        >
        </line>
        <line x1="4.93"
              y1="4.93"
              x2="7.76"
              y2="7.76"
        >
        </line>
        <line x1="16.24"
              y1="16.24"
              x2="19.07"
              y2="19.07"
        >
        </line>
        <line x1="2"
              y1="12"
              x2="6"
              y2="12"
        >
        </line>
        <line x1="18"
              y1="12"
              x2="22"
              y2="12"
        >
        </line>
        <line x1="4.93"
              y1="19.07"
              x2="7.76"
              y2="16.24"
        >
        </line>
        <line x1="16.24"
              y1="7.76"
              x2="19.07"
              y2="4.93"
        >
        </line>
      </svg>
    </span>
    <span class>
      Button
    </span>
  </button>
</div>
`;

exports[`Elements/Button Outline smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <button type="button"
          class="btn text-xs sm:text-sm transition-all btn-outline-success shadow-none capitalize border-solid"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class>
      Button
    </span>
  </button>
</div>
`;

exports[`Elements/Button Rounded smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <button type="button"
          class="btn text-xs sm:text-sm transition-all btn-info shadow-none rounded-lg uppercase border-solid active:brightness-95"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class>
      Button
    </span>
  </button>
</div>
`;

exports[`Elements/Button Shadow smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <button type="button"
          class="btn text-xs sm:text-sm transition-all btn-secondary btn-lg shadow-[0_10px_20px_-10px_rgba(67,97,238,0.44)] capitalize border-solid active:brightness-95"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class>
      Button
    </span>
  </button>
</div>
`;

exports[`Elements/Button Size smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <button type="button"
          class="btn text-xs sm:text-sm transition-all w-full btn-warning btn-lg shadow-none capitalize border-solid active:brightness-95"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class>
      Button
    </span>
  </button>
</div>
`;

exports[`Elements/Button WithIcon smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <button type="button"
          class="btn text-xs sm:text-sm transition-all btn-primary btn-md shadow-none normal-case border-solid active:brightness-95"
  >
    <span class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0">
    </span>
    <span class="inline-flex align-middle">
      <svg width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class
      >
        <circle cx="12"
                cy="12"
                r="3"
                stroke="currentColor"
                stroke-width="1.5"
        >
        </circle>
        <path opacity="0.5"
              d="M13.7654 2.15224C13.3978 2 12.9319 2 12 2C11.0681 2 10.6022 2 10.2346 2.15224C9.74457 2.35523 9.35522 2.74458 9.15223 3.23463C9.05957 3.45834 9.0233 3.7185 9.00911 4.09799C8.98826 4.65568 8.70226 5.17189 8.21894 5.45093C7.73564 5.72996 7.14559 5.71954 6.65219 5.45876C6.31645 5.2813 6.07301 5.18262 5.83294 5.15102C5.30704 5.08178 4.77518 5.22429 4.35436 5.5472C4.03874 5.78938 3.80577 6.1929 3.33983 6.99993C2.87389 7.80697 2.64092 8.21048 2.58899 8.60491C2.51976 9.1308 2.66227 9.66266 2.98518 10.0835C3.13256 10.2756 3.3397 10.437 3.66119 10.639C4.1338 10.936 4.43789 11.4419 4.43786 12C4.43783 12.5581 4.13375 13.0639 3.66118 13.3608C3.33965 13.5629 3.13248 13.7244 2.98508 13.9165C2.66217 14.3373 2.51966 14.8691 2.5889 15.395C2.64082 15.7894 2.87379 16.193 3.33973 17C3.80568 17.807 4.03865 18.2106 4.35426 18.4527C4.77508 18.7756 5.30694 18.9181 5.83284 18.8489C6.07289 18.8173 6.31632 18.7186 6.65204 18.5412C7.14547 18.2804 7.73556 18.27 8.2189 18.549C8.70224 18.8281 8.98826 19.3443 9.00911 19.9021C9.02331 20.2815 9.05957 20.5417 9.15223 20.7654C9.35522 21.2554 9.74457 21.6448 10.2346 21.8478C10.6022 22 11.0681 22 12 22C12.9319 22 13.3978 22 13.7654 21.8478C14.2554 21.6448 14.6448 21.2554 14.8477 20.7654C14.9404 20.5417 14.9767 20.2815 14.9909 19.902C15.0117 19.3443 15.2977 18.8281 15.781 18.549C16.2643 18.2699 16.8544 18.2804 17.3479 18.5412C17.6836 18.7186 17.927 18.8172 18.167 18.8488C18.6929 18.9181 19.2248 18.7756 19.6456 18.4527C19.9612 18.2105 20.1942 17.807 20.6601 16.9999C21.1261 16.1929 21.3591 15.7894 21.411 15.395C21.4802 14.8691 21.3377 14.3372 21.0148 13.9164C20.8674 13.7243 20.6602 13.5628 20.3387 13.3608C19.8662 13.0639 19.5621 12.558 19.5621 11.9999C19.5621 11.4418 19.8662 10.9361 20.3387 10.6392C20.6603 10.4371 20.8675 10.2757 21.0149 10.0835C21.3378 9.66273 21.4803 9.13087 21.4111 8.60497C21.3592 8.21055 21.1262 7.80703 20.6602 7C20.1943 6.19297 19.9613 5.78945 19.6457 5.54727C19.2249 5.22436 18.693 5.08185 18.1671 5.15109C17.9271 5.18269 17.6837 5.28136 17.3479 5.4588C16.8545 5.71959 16.2644 5.73002 15.7811 5.45096C15.2977 5.17191 15.0117 4.65566 14.9909 4.09794C14.9767 3.71848 14.9404 3.45833 14.8477 3.23463C14.6448 2.74458 14.2554 2.35523 13.7654 2.15224Z"
              stroke="currentColor"
              stroke-width="1.5"
        >
        </path>
      </svg>
    </span>
    <span class="ltr:ml-2 rtl:mr-2">
      Settings
    </span>
  </button>
</div>
`;
